# Photo-Editor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  format_chunky.generator_binary  halide_library_runtime.generator_binary  main
genfiles/format_chunky/: format_chunky.h
src/editor/: main.cc
src/generators/: BUILD  format_chunky.cc
src/gl_util/: gl_debug.h  gl_shader.h
src/gui/: app.cc  app.cpp  app.h
src/rendering/: renderer.cc  renderer.h  renderer_legacy.cc
src/shaders/: photo_fsh.glsl  photo_vsh.glsl
src/util/: image.cc  image.h
